--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
   </head>
 
   <body>
-    TEST
+    <div class="container">
+      <div id="board">
+        <div class="square" id="_0"></div>
+        <div class="square" id="_1"></div>
+        <div class="square" id="_2"></div>
+        <div class="square" id="_3"></div>
+        <div class="square" id="_4"></div>
+        <div class="square" id="_5"></div>
+        <div class="square" id="_6"></div>
+        <div class="square" id="_7"></div>
+        <div class="square" id="_8"></div>
+      </div>
+    </div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
