--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
       </header>
 
       <section id="board">
-        <div class="square" id="_0"></div>
-        <div class="square" id="_1"></div>
-        <div class="square" id="_2"></div>
-        <div class="square" id="_3"></div>
-        <div class="square" id="_4"></div>
-        <div class="square" id="_5"></div>
-        <div class="square" id="_6"></div>
-        <div class="square" id="_7"></div>
-        <div class="square" id="_8"></div>
+        <div class="square" id="_0"><span></span></div>
+        <div class="square" id="_1"><span></span></div>
+        <div class="square" id="_2"><span></span></div>
+        <div class="square" id="_3"><span></span></div>
+        <div class="square" id="_4"><span></span></div>
+        <div class="square" id="_5"><span></span></div>
+        <div class="square" id="_6"><span></span></div>
+        <div class="square" id="_7"><span></span></div>
+        <div class="square" id="_8"><span></span></div>
       </section>
     </div>
 
