--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
         <div>
           <form onsubmit="return gameController.insertPlayers()">
             <div class="player">
-              <label for="player1">Player 1:</label>
-              <input type="text" id="player1" name="player1">
+              <label for="name1">Player 1:</label>
+              <input type="text" id="name1" name="name1">
+              <label for="cpu1">Computer?</label>
+              <input type="checkbox" id="cpu1" name="cpu1">
             </div>
 
             <div class="player">
-              <label for="player1">Player 2:</label>
-              <input type="text" id="player2" name="player2">
+              <label for="name2">Player 2:</label>
+              <input type="text" id="name2" name="name2">
+              <label for="cpu2">Computer?</label>
+              <input type="checkbox" id="cpu2" name="cpu2">
             </div>
 
             <input type="submit" id="confirm" value="Confirm">
